--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -1,165 +1,187 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_color"
-    android:orientation="vertical"
-    android:paddingTop="30dp"
-    android:paddingLeft="30dp"
-    android:paddingRight="30dp"
     tools:context=".ui.cart.CartActivity">
 
-    <ImageButton
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:src="@drawable/ic_baseline_arrow_back_24"
-        android:background="@null"
-        android:layout_gravity="left"
-
-    />
-    <TextView
-        android:id="@+id/titleCart"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:textAlignment="center"
-        android:fontFamily="@font/grotesk_medium"
-        android:text="@string/titleCart"
-        android:textColor="@color/fontTitle"
-        android:textSize="48sp"
-        android:textStyle="bold"
-    />
-    <TextView
-        android:id="@+id/txtMessage"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/grotesk_medium"
-        android:layout_marginTop="30dp"
-        android:textSize="20dp"
-        android:textAlignment="center"
-        android:text="Agregar productos al carrito"
-        />
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/listProduct"
-        android:layout_width="match_parent"
-        android:layout_height="250dp" />
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
+        <include layout="@layout/main_toolbar" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/bg_color"
+            android:orientation="vertical"
+            android:paddingLeft="30dp"
+            android:paddingTop="30dp"
+            android:paddingRight="30dp">
+
+            <ImageButton
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_gravity="left"
+                android:background="@null"
+                android:src="@drawable/ic_baseline_arrow_back_24"
+
+                />
+
+            <TextView
+                android:id="@+id/titleCart"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:fontFamily="@font/grotesk_medium"
+                android:text="@string/titleCart"
+                android:textAlignment="center"
+                android:textColor="@color/fontTitle"
+                android:textSize="48sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/txtMessage"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:fontFamily="@font/grotesk_medium"
+                android:text="Agregar productos al carrito"
+                android:textAlignment="center"
+                android:textSize="20dp" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/listProduct"
+                android:layout_width="match_parent"
+                android:layout_height="250dp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            </LinearLayout>
+            <!--Montos a Pagar-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:padding="1dp">
+
+                <TextView
+                    android:id="@+id/txtSubtotal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/grotesk_medium"
+                    android:text="SubTotal"
+
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/precioSubtotal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"
+                    android:text="S/.0"
+                    android:textAlignment="textEnd"
+                    android:textColor="#0C1423"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="1dp">
+
+                <TextView
+                    android:id="@+id/idDescuento"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"
+                    android:text="IGV"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/montoIGV"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"
+                    android:text="S/.0"
+                    android:textAlignment="textEnd"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="1dp"
+                android:padding="1dp">
+
+                <TextView
+                    android:id="@+id/idTotal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"
+                    android:text="Total"
+                    android:textColor="#F43127"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/montoTotal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"
+                    android:text="S/.0"
+                    android:textAlignment="textEnd"
+                    android:textColor="#0C1423"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+
+            <Button
+                android:id="@+id/btn_Start"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="70dp"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/btn_round"
+                android:onClick="payCart"
+                android:text="@string/btnPagar"
+                android:textAllCaps="false"
+                android:textColor="@color/fontPrimary"
+                android:textSize="18dp"
+                app:backgroundTint="@color/primary" />
+        </LinearLayout>
     </LinearLayout>
-    <!--Montos a Pagar-->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="1dp"
-        android:layout_marginTop="20dp"
-    >
-        <TextView
-            android:id="@+id/txtSubtotal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:text="SubTotal"
-            android:textSize="20sp"
-            android:textStyle="bold"
 
-            android:fontFamily="@font/grotesk_medium"
-            android:layout_weight="1"
-        />
+    <RelativeLayout
 
-        <TextView
-            android:id="@+id/precioSubtotal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:textAlignment="textEnd"
-            android:text="S/.0"
-            android:textColor="#0C1423"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:layout_weight="1"
-        />
+        android:layout_width="300dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="@android:color/white">
 
-    </LinearLayout>
+        <include layout="@layout/main_nav_drawer" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="1dp"
-    >
-        <TextView
-            android:id="@+id/idDescuento"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:text="IGV"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:layout_weight="1"
-        />
+    </RelativeLayout>
 
-        <TextView
-            android:id="@+id/montoIGV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:textAlignment="textEnd"
-            android:text="S/.0"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:layout_weight="1"
-        />
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="1dp"
-        android:layout_margin="1dp"
-    >
-        <TextView
-            android:id="@+id/idTotal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:text="Total"
-            android:textColor="#F43127"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:layout_weight="1"
-        />
-
-        <TextView
-            android:id="@+id/montoTotal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:text="S/.0"
-            android:textAlignment="textEnd"
-            android:textColor="#0C1423"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:layout_weight="1"
-        />
-    </LinearLayout>
-
-
-    <Button
-        android:id="@+id/btn_Start"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="70dp"
-        android:layout_marginRight="10dp"
-        android:background="@drawable/btn_round"
-        android:onClick="payCart"
-        android:text="@string/btnPagar"
-        android:textAllCaps="false"
-        android:textColor="@color/fontPrimary"
-        android:textSize="18dp"
-        app:backgroundTint="@color/primary" />
-</LinearLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
