--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,132 +1,158 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/time"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:background="@drawable/bg_color"
-    android:orientation="vertical"
-    android:paddingLeft="20dp"
-    android:paddingTop="20dp"
-    android:paddingRight="20dp"
     tools:context=".ui.home.HomeActivity">
-
-    <TextView
-        android:id="@+id/titleCart"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:fontFamily="@font/grotesk_medium"
-        android:text="@string/txtLaCarta"
-        android:textColor="@color/fontTitle"
-        android:textSize="34sp"
-        android:textStyle="bold" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:padding="1dp">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
+        <include layout="@layout/main_toolbar" />
 
-        <Button
-            android:id="@+id/btnMenu2"
-            android:layout_width="77dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="2dp"
-            android:layout_weight="1"
-            android:backgroundTint="@color/menu1"
-            android:drawableTop="@drawable/ic_burger"
-            android:onClick="showStarterPlate"
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"
-            android:text="@string/txtMenu2"
-            android:textAlignment="center"
-            android:textAllCaps="false"
-            android:textColor="@color/fontTitle"
-            android:textSize="10sp"
-            android:textStyle="bold"
-            app:cornerRadius="15dp" />
-
-        <Button
-            android:id="@+id/btnMenu1"
-            android:layout_width="77dp"
-            android:layout_height="match_parent"
-            android:layout_margin="2dp"
-            android:layout_weight="1"
-            android:backgroundTint="@color/menu1"
-            android:drawableTop="@drawable/ic_breakfast"
-            android:onClick="showDish"
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"
-            android:text="@string/txtMenu1"
-            android:textAlignment="center"
-            android:textAllCaps="false"
-            android:textColor="@color/fontTitle"
-            android:textSize="10sp"
-            android:textStyle="bold"
-            app:cornerRadius="15dp" />
+            android:orientation="vertical"
+            android:paddingLeft="20dp"
+            android:paddingTop="20dp"
+            android:paddingRight="20dp">
 
 
-        <Button
-            android:id="@+id/btnMenu3"
-            android:layout_width="77dp"
-            android:layout_height="match_parent"
-            android:layout_margin="2dp"
-            android:layout_weight="1"
-            android:backgroundTint="@color/menu1"
-            android:drawableTop="@drawable/ic_postre"
-            android:onClick="showDesserts"
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"
-            android:text="@string/txtMenu3"
-            android:textAlignment="center"
-            android:textAllCaps="false"
-            android:textColor="@color/fontTitle"
-            android:textSize="10sp"
-            android:textStyle="bold"
-            app:cornerRadius="15dp" />
+            <TextView
+                android:id="@+id/titleCart"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:fontFamily="@font/grotesk_medium"
+                android:orientation="vertical"
+                android:text="@string/txtLaCarta"
+                android:textColor="@color/fontTitle"
+                android:textSize="34sp"
+                android:textStyle="bold" />
 
-        <Button
-            android:id="@+id/btnMenu4"
-            android:layout_width="77dp"
-            android:layout_height="match_parent"
-            android:layout_margin="2dp"
-            android:layout_weight="1"
-            android:backgroundTint="@color/menu1"
-            android:drawableTop="@drawable/ic_flat"
-            android:onClick="showDrinks"
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"
-            android:text="@string/txtMenu4"
-            android:textAlignment="center"
-            android:textAllCaps="false"
-            android:textColor="@color/fontTitle"
-            android:textSize="10sp"
-            android:textStyle="bold"
-            app:cornerRadius="15dp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:padding="1dp">
 
+
+                <Button
+                    android:id="@+id/btnMenu2"
+                    android:layout_width="77dp"
+                    android:layout_height="match_parent"
+                    android:layout_margin="2dp"
+                    android:layout_weight="1"
+                    android:backgroundTint="@color/menu1"
+                    android:drawableTop="@drawable/ic_burger"
+                    android:onClick="showStarterPlate"
+                    android:paddingLeft="15dp"
+                    android:paddingRight="15dp"
+                    android:text="@string/txtMenu2"
+                    android:textAlignment="center"
+                    android:textAllCaps="false"
+                    android:textColor="@color/fontTitle"
+                    android:textSize="10sp"
+                    android:textStyle="bold"
+                    app:cornerRadius="15dp" />
+
+                <Button
+                    android:id="@+id/btnMenu1"
+                    android:layout_width="77dp"
+                    android:layout_height="match_parent"
+                    android:layout_margin="2dp"
+                    android:layout_weight="1"
+                    android:backgroundTint="@color/menu1"
+                    android:drawableTop="@drawable/ic_breakfast"
+                    android:onClick="showDish"
+                    android:paddingLeft="15dp"
+                    android:paddingRight="15dp"
+                    android:text="@string/txtMenu1"
+                    android:textAlignment="center"
+                    android:textAllCaps="false"
+                    android:textColor="@color/fontTitle"
+                    android:textSize="10sp"
+                    android:textStyle="bold"
+                    app:cornerRadius="15dp" />
+
+
+                <Button
+                    android:id="@+id/btnMenu3"
+                    android:layout_width="77dp"
+                    android:layout_height="match_parent"
+                    android:layout_margin="2dp"
+                    android:layout_weight="1"
+                    android:backgroundTint="@color/menu1"
+                    android:drawableTop="@drawable/ic_postre"
+                    android:onClick="showDesserts"
+                    android:paddingLeft="15dp"
+                    android:paddingRight="15dp"
+                    android:text="@string/txtMenu3"
+                    android:textAlignment="center"
+                    android:textAllCaps="false"
+                    android:textColor="@color/fontTitle"
+                    android:textSize="10sp"
+                    android:textStyle="bold"
+                    app:cornerRadius="15dp" />
+
+                <Button
+                    android:id="@+id/btnMenu4"
+                    android:layout_width="77dp"
+                    android:layout_height="match_parent"
+                    android:layout_margin="2dp"
+                    android:layout_weight="1"
+                    android:backgroundTint="@color/menu1"
+                    android:drawableTop="@drawable/ic_flat"
+                    android:onClick="showDrinks"
+                    android:paddingLeft="15dp"
+                    android:paddingRight="15dp"
+                    android:text="@string/txtMenu4"
+                    android:textAlignment="center"
+                    android:textAllCaps="false"
+                    android:textColor="@color/fontTitle"
+                    android:textSize="10sp"
+                    android:textStyle="bold"
+                    app:cornerRadius="15dp" />
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/titleCart2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:fontFamily="@font/grotesk_medium"
+                android:text="@string/txtRecomendacionesparati"
+                android:textColor="@color/fontTitle"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/listProduct_"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/titleCart2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:fontFamily="@font/grotesk_medium"
-        android:text="@string/txtRecomendacionesparati"
-        android:textColor="@color/fontTitle"
-        android:textSize="14sp"
-        android:textStyle="bold" />
+
+    <RelativeLayout
+
+        android:layout_width="300dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="@android:color/white">
+
+        <include layout="@layout/main_nav_drawer" />
+
+    </RelativeLayout>
 
 
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/listProduct_"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-
-
-</LinearLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
