--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,117 +1,145 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_color"
-    android:orientation="vertical"
-    android:padding="30dp"
-    android:paddingRight="300dp"
-    android:paddingLeft="30dp"
     tools:context=".ui.profile.ProfileActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Perfil"
-        android:layout_gravity="center"
-        android:textSize="38dp"
-        android:fontFamily="@font/grotesk_medium"
-        android:layout_marginBottom="20dp"
-        />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/bg_color"
+        android:orientation="vertical"
 
-    <TextView
-        android:id="@+id/txtNombre_"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Nombres"
-        android:padding="10dp"
-        android:layout_marginTop="14dp"
-        android:textSize="16dp"
-        />
+        >
 
-    <EditText
-        android:id="@+id/et_nameOwnUser"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:drawablePadding="5dp"
-        android:fontFamily="@font/grotesk_medium"
-        android:hint="Marco Antonio"
-        android:drawableLeft="@drawable/ic_baseline_person_24"
-        android:textSize="18dp" />
+        <include layout="@layout/main_toolbar" />
 
-    <TextView
-        android:id="@+id/txtApellidos_"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Apellidos"
-        android:padding="10dp"
-        android:layout_marginTop="20dp"
-        android:textSize="16dp"
-        />
-    <EditText
-        android:id="@+id/et_lastNameOwnUser"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/grotesk_medium"
-        android:textSize="18dp"
-        android:hint="Atencio Maravi"
-        />
-    <TextView
-        android:id="@+id/txtPhone_"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Telefono"
-        android:padding="10dp"
-        android:layout_marginTop="20dp"
-        android:textSize="16dp"
-        />
-    <EditText
-        android:id="@+id/et_phoneOwnUser"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="18dp"
-        android:fontFamily="@font/grotesk_medium"
-        android:hint="982314123"
-        android:drawableLeft="@drawable/ic_baseline_phone_24"
-        android:drawablePadding="5dp"
-        />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/bg_color"
+            android:orientation="vertical"
+            android:padding="30dp"
+            android:paddingLeft="30dp"
+            android:paddingRight="300dp">
 
-    <TextView
-        android:id="@+id/txtDate_"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Fecha de Nacimiento"
-        android:layout_marginTop="20dp"
-        android:padding="10dp"
-        android:textSize="16dp"
-        />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginBottom="20dp"
+                android:fontFamily="@font/grotesk_medium"
+                android:text="Perfil"
+                android:textSize="38dp" />
 
-    <EditText
-        android:id="@+id/et_dateBirthOwnUser"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:drawableLeft="@drawable/ic_baseline_calendar_today_24"
-        android:drawablePadding="5dp"
-        android:fontFamily="@font/grotesk_medium"
-        android:hint="13-07-1999"
-        android:textSize="18dp" />
+            <TextView
+                android:id="@+id/txtNombre_"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="14dp"
+                android:padding="10dp"
+                android:text="Nombres"
+                android:textSize="16dp" />
 
-    <Button
-        android:id="@+id/btn_Start"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginRight="10dp"
-        android:background="@drawable/btn_round"
-        android:onClick="updateProfile"
-        android:text="Actualizar"
-        android:textAllCaps="false"
-        android:textColor="@color/fontPrimary"
-        android:textSize="18dp"
-        app:backgroundTint="@color/primary" />
+            <EditText
+                android:id="@+id/et_nameOwnUser"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/ic_baseline_person_24"
+                android:drawablePadding="5dp"
+                android:fontFamily="@font/grotesk_medium"
+                android:hint="Marco Antonio"
+                android:textSize="18dp" />
+
+            <TextView
+                android:id="@+id/txtApellidos_"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:padding="10dp"
+                android:text="Apellidos"
+                android:textSize="16dp" />
+
+            <EditText
+                android:id="@+id/et_lastNameOwnUser"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/grotesk_medium"
+                android:hint="Atencio Maravi"
+                android:textSize="18dp" />
+
+            <TextView
+                android:id="@+id/txtPhone_"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:padding="10dp"
+                android:text="Telefono"
+                android:textSize="16dp" />
+
+            <EditText
+                android:id="@+id/et_phoneOwnUser"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/ic_baseline_phone_24"
+                android:drawablePadding="5dp"
+                android:fontFamily="@font/grotesk_medium"
+                android:hint="982314123"
+                android:textSize="18dp" />
+
+            <TextView
+                android:id="@+id/txtDate_"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:padding="10dp"
+                android:text="Fecha de Nacimiento"
+                android:textSize="16dp" />
+
+            <EditText
+                android:id="@+id/et_dateBirthOwnUser"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/ic_baseline_calendar_today_24"
+                android:drawablePadding="5dp"
+                android:fontFamily="@font/grotesk_medium"
+                android:hint="13-07-1999"
+                android:textSize="18dp" />
+
+            <Button
+                android:id="@+id/btn_Start"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/btn_round"
+                android:onClick="updateProfile"
+                android:text="Actualizar"
+                android:textAllCaps="false"
+                android:textColor="@color/fontPrimary"
+                android:textSize="18dp"
+                app:backgroundTint="@color/primary" />
 
 
-</LinearLayout>
+        </LinearLayout>
+
+
+    </LinearLayout>
+
+    <RelativeLayout
+
+        android:layout_width="300dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="@android:color/white">
+
+        <include layout="@layout/main_nav_drawer" />
+
+    </RelativeLayout>
+
+
+</androidx.drawerlayout.widget.DrawerLayout>
