--- a/app/src/main/res/layout/activity_user_qr_activity.xml
+++ b/app/src/main/res/layout/activity_user_qr_activity.xml
@@ -1,61 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_color"
-    android:paddingRight="20dp"
-    android:paddingLeft="20dp"
     tools:context=".ui.UserQR.UserQRActivity">
 
-    <androidx.cardview.widget.CardView
+
+    <LinearLayout
         android:layout_width="match_parent"
-        app:cardCornerRadius="20dp"
-        android:layout_gravity="center_vertical"
-        android:orientation="horizontal"
-        app:cardElevation="4dp"
-        app:cardUseCompatPadding="true"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:background="@drawable/bg_color"
+        android:orientation="vertical">
+
+        <include layout="@layout/main_toolbar" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:orientation="vertical"
-            android:paddingRight="10dp"
-            android:paddingLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="30dp"
-            android:layout_height="wrap_content">
-            <ImageView
-                android:id="@+id/profileQR_"
-                android:layout_width="80dp"
-                android:layout_height="70dp"
-                android:layout_gravity="center_horizontal"/>
-            <TextView
-                android:id="@+id/txtNameQr_"
-                android:layout_width="match_parent"
-                android:text="Marco Max Atencio Maravi"
-                android:gravity="center"
-                android:layout_margin="20dp"
-                android:fontFamily="@font/grotesk_medium"
-                android:textSize="20dp"
-                android:layout_height="wrap_content"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:textSize="16dp"
-                android:text="Usa tu código QR para recoger tu pedido"
-                />
-            <ImageView
-                android:id="@+id/qr_"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="20dp"
-                android:src="@drawable/ic_qr_code"
-                />
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
+            android:layout_height="match_parent"
 
-</LinearLayout>
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp">
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:orientation="horizontal"
+                app:cardCornerRadius="20dp"
+                app:cardElevation="4dp"
+                app:cardUseCompatPadding="true">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="30dp"
+                    android:orientation="vertical"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp">
+
+                    <ImageView
+                        android:id="@+id/profileQR_"
+                        android:layout_width="80dp"
+                        android:layout_height="70dp"
+                        android:layout_gravity="center_horizontal" />
+
+                    <TextView
+                        android:id="@+id/txtNameQr_"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="20dp"
+                        android:fontFamily="@font/grotesk_medium"
+                        android:gravity="center"
+                        android:text="Marco Max Atencio Maravi"
+                        android:textSize="20dp" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="Usa tu código QR para recoger tu pedido"
+                        android:textSize="16dp" />
+
+                    <ImageView
+                        android:id="@+id/qr_"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="20dp"
+                        android:layout_marginBottom="20dp"
+                        android:src="@drawable/ic_qr_code" />
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+        </LinearLayout>
+    </LinearLayout>
+
+    <RelativeLayout
+
+        android:layout_width="300dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="@android:color/white">
+
+        <include layout="@layout/main_nav_drawer" />
+
+    </RelativeLayout>
+
+</androidx.drawerlayout.widget.DrawerLayout>
